--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,7 +14,7 @@
 }
 
 /* 边框和交互效果（.a 类） */
-.a, .b, .c, .d, .e, .f, .H, .I, .K, .M, .N, .O, .P, .Q, .R, .S, .T, .U ,.V ,.W {
+.a, .b, .c, .d, .e, .f, .H, .I, .K, .M, .N, .O, .P, .Q, .R, .S, .T, .U ,.V ,.W ,.X {
     position: absolute;
     box-shadow: inset 0 0 0 0.05px #000;
     background: linear-gradient(-45deg, #ee5252, #e73c7e, #23a6d5, #23d5ab, #3e05fa);
@@ -28,7 +28,7 @@
     height: 250px;
 }
 
-.a:hover, .b:hover, .c:hover, .d:hover, .e:hover, .f:hover, .H:hover, .I:hover, .K:hover, .M:hover, .N:hover, .O:hover, .P:hover, .Q:hover, .R:hover, .S:hover, .T:hover, .U:hover ,.V:hover ,.W:hover {
+.a:hover, .b:hover, .c:hover, .d:hover, .e:hover, .f:hover, .H:hover, .I:hover, .K:hover, .M:hover, .N:hover, .O:hover, .P:hover, .Q:hover, .R:hover, .S:hover, .T:hover, .U:hover ,.V:hover ,.W:hover ,.X:hover {
     width: 300px;
     height: 250px;
     background-color: #fff;
@@ -163,6 +163,11 @@
     left: 8px;
     top: 2744px;
     font-family: 'EACH',sans-serif;
+}
+.X{
+    left: 914.7px;
+    top: 3048px;
+    font-family: 'R',sans-serif;
 }
 
 .NOV {
